<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_title_fragment_exercises_edition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_fragment_exercises_edition"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_image_url_fragment_exercises_edition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/image_url_fragment_exercises_edition"
                app:startIconDrawable="@android:drawable/ic_menu_gallery">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_image_url_fragment_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_video_url_fragment_exercises_edition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/video_url_fragment_exercises_edition"
                app:startIconDrawable="@android:drawable/ic_media_play">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_video_url_fragment_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_fragment_exercises_edition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name_fragment_exercises_edition">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name_fragment_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rg_type_fragment_exercises_edition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/rb_lower_body_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_inf_fragment_exercises_edition" />

                <RadioButton
                    android:id="@+id/rb_upper_body_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_sup_fragment_exercises_edition" />

                <RadioButton
                    android:id="@+id/rb_core_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_core_fragment_exercises_edition" />
            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_materials_fragment_exercises_edition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/switch_materials_fragment_exercises_edition"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_materials_list_fragment_exercises_edition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/materials_list_fragment_exercises_edition"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_materials_list_fragment_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description_fragment_exercises_edition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/description_fragment_exercises_edition">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description_fragment_exercises_edition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="4" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_exercise"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/btn_create_exercises" />

</LinearLayout>